--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "importane": {
+    "importane-tmp": {
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/importane",
+            "outputPath": "dist/importane-tmp",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -26,8 +26,8 @@
               "src/styles.css"
             ],
             "scripts": [
-              "../node_modules/jquery/dist/jquery.min.js",
-              "../node_modules/bootstrap/dist/js/bootstrap.js"
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.js"
             ]
           },
           "configurations": {
@@ -46,32 +46,25 @@
               "aot": true,
               "extractLicenses": true,
               "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                }
-              ]
+              "buildOptimizer": true
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "importane:build"
+            "browserTarget": "importane-tmp:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "importane:build:production"
+              "browserTarget": "importane-tmp:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "importane:build"
+            "browserTarget": "importane-tmp:build"
           }
         },
         "test": {
@@ -105,20 +98,19 @@
         }
       }
     },
-    "importane-e2e": {
+    "importane-tmp-e2e": {
       "root": "e2e/",
       "projectType": "application",
-      "prefix": "",
       "architect": {
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "importane:serve"
+            "devServerTarget": "importane-tmp:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "importane:serve:production"
+              "devServerTarget": "importane-tmp:serve:production"
             }
           }
         },
@@ -134,5 +126,5 @@
       }
     }
   },
-  "defaultProject": "importane"
+  "defaultProject": "importane-tmp"
 }
